fix: close beta button mobile size

--- a/src/App.scss
+++ b/src/App.scss
@@ -57,7 +57,7 @@ body {
         padding: 6px 9px;
         border-radius: 999px;
         background-color: #aeffc1;
-        font-size: 14px;
+        font-size: 13.5px;
         font-weight: 500;
         line-height: 19.6px;
         letter-spacing: -0.7px;
@@ -69,7 +69,7 @@ body {
         background-color: transparent;
         border: 1.3px solid #58ff7d;
         color: #aeffc1;
-        width: 82px;
+        width: 84px;
         margin-right: 8px;
       }
 
